@@ -1041,4 +1041,6 @@ int	calculate_sleeptime(int nextcheck, int max_sleeptime);
 
 void	zbx_replace_string(char **data, size_t l, size_t *r, const char *value);
 
+void	zbx_trim_str_list(char *list, char delimiter);
+
 #endif
