@@ -99,6 +99,8 @@ static void	zbx_load_config(int optional)
 	zbx_strarr_init(&CONFIG_USER_PARAMETERS);
 
 	parse_cfg_file(CONFIG_FILE, cfg, optional, ZBX_CFG_STRICT);
+
+	zbx_trim_str_list(CONFIG_HOSTS_ALLOWED, ',');
 }
 
 /******************************************************************************
